# rules_swiftnav

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  cereal.BUILD  check.BUILD  configure_file.bzl  configure_file.md  eigen.BUILD  fast-cpp-csv-parser.BUILD  fast_csv.BUILD  gzip.BUILD  json.BUILD  nlopt.BUILD  optional.BUILD  qac_compile_commands.bzl  qac_compile_commands.sh  rapidcheck.BUILD  swift_cc_defs.bzl  swift_cc_defs.md  swift_targets.bzl  variant.BUILD  yaml-cpp.BUILD
cc/: BUILD.bazel  cc_static_library.bzl  check_allowed_cc_deps.bzl  checktags.py  copts.bzl  defs.bzl  defs2.bzl  extensions.bzl  fix_include_guards.py  iec559.bzl  local_include_prefix.bzl  new.bzl  new_copts.bzl  old_defs.bzl  repositories.bzl  strip.bzl  tgt.bzl  utils.bzl
cc/constraints/: BUILD.bazel
cc/toolchain/: BUILD.bazel  BUILD.llvm  BUILD.toolchain  cc_toolchain_config.bzl  cc_wrapper.sh  host_libtool_wrapper.sh  llvm.BUILD
cc/toolchain/wrappers/: cc_wrapper.sh  wrapper
cc/toolchains/: BUILD.bazel  cc_toolchain_config.bzl  gcc_llvm_flags.bzl  llvm.BUILD.bzl
cc/toolchains/aptiv/: BUILD.bazel
cc/toolchains/gcc_11/x86_64-linux/: BUILD.bazel  config.bzl  swift_custom_features.bzl
cc/toolchains/gcc_arm_embedded/: BUILD.bazel  config.bzl  init.bzl  swift_custom_features.bzl  toolchain.BUILD
cc/toolchains/gcc_arm_embedded/wrappers/: wrapper
cc/toolchains/gcc_arm_gnu_8_3/: BUILD.bazel  config.bzl  swift_custom_features.bzl  toolchain.BUILD
cc/toolchains/gcc_arm_gnu_8_3/wrappers/: wrapper
cc/toolchains/llvm/: BUILD.bazel  cc_toolchain_config.bzl  ffp.c  llvm.BUILD.bzl  llvm.patch  swift_custom_features.bzl  target_triplets.bzl  unix_cc_toolchain_config.bzl
cc/toolchains/llvm-mingw/: BUILD.bazel
cc/toolchains/llvm-mingw/x86_64-linux/: BUILD.bazel
cc/toolchains/llvm-mingw/x86_64-windows/: BUILD.bazel
cc/toolchains/llvm/aarch64-darwin/: BUILD.bazel
cc/toolchains/llvm/aarch64-linux/: BUILD.bazel
cc/toolchains/llvm/wrappers/: wrapper
cc/toolchains/llvm/x86_64-aarch64-linux/: BUILD.bazel
cc/toolchains/llvm/x86_64-darwin/: BUILD.bazel
cc/toolchains/llvm/x86_64-darwin-aarch64-linux/: BUILD.bazel
cc/toolchains/llvm/x86_64-darwin-x86_64-linux/: BUILD.bazel
cc/toolchains/llvm/x86_64-linux/: BUILD.bazel
cc/toolchains/llvm20/: BUILD.bazel  cc_toolchain_config.bzl  llvm.BUILD.bzl  swift_custom_features.bzl  unix_cc_toolchain_config.bzl
cc/toolchains/llvm20/aarch64-darwin/: BUILD.bazel
cc/toolchains/llvm20/aarch64-linux/: BUILD.bazel
cc/toolchains/llvm20/x86_64-aarch64-linux/: BUILD.bazel
cc/toolchains/llvm20/x86_64-darwin/: BUILD.bazel
cc/toolchains/llvm20/x86_64-linux/: BUILD.bazel
cc/toolchains/llvm_x86_64_windows/: BUILD.bazel  config.bzl  toolchain.BUILD
cc/toolchains/llvm_x86_64_windows/wrappers/: symlink  wrapper  wrappers  x86_64-w64-mingw32uwp-ar  x86_64-w64-mingw32uwp-as  x86_64-w64-mingw32uwp-clang  x86_64-w64-mingw32uwp-cpp  x86_64-w64-mingw32uwp-g++  x86_64-w64-mingw32uwp-gcc  x86_64-w64-mingw32uwp-nm  x86_64-w64-mingw32uwp-objdump  x86_64-w64-mingw32uwp-strip
cc/toolchains/musl/: musl.BUILD.bzl
cc/toolchains/musl/aarch64/: BUILD.bazel  config.bzl  musl.BUILD.bzl
cc/toolchains/musl/armhf/: BUILD.bazel  config.bzl
cc/toolchains/musl/armhf_static/: BUILD.bazel  config.bzl
cc/toolchains/musl/x86_64/: BUILD.bazel  config.bzl  musl.BUILD.bzl
cc/toolchains/step/: BUILD.bazel  config.bzl  swift_custom_features.bzl
cc/toolchains/system_gcc/gcc11_x86_64-linux/: BUILD.bazel  config.bzl  swift_custom_features.bzl
cc/toolchains/system_gcc/gcc12_x86_64-linux/: BUILD.bazel
cc/toolchains/tesla/: BUILD.bazel  config.bzl  swift_custom_features.bzl
cc/toolchains/tesla/aarch64/: BUILD.bazel
cc/toolchains/tesla/x86_64/: BUILD.bazel
cc/toolchains/wrappers/: wrapper
cc/toolchains/yocto_generic/: BUILD.bazel  config.bzl  yocto_generic.bzl  yocto_generic_extension.bzl
cc_files/: BUILD.bazel  compare_cc_test_files.sh  get_cc_files.bzl  get_test_cc_files.sh
clang_format/: .clang-format  BUILD  BUILD.bazel  choose_clang_format.bzl  clang_format_check.bzl  examplerc  run_clang_format.sh
clang_tidy/: .clang-tidy  .clang-tidy-internal  .clang-tidy-optional  .clang-tidy-prod  .clang-tidy-safe  BUILD  BUILD.bazel  choose_clang_tidy.bzl  clang_tidy.bzl  clang_tidy_fixes.sh  run_clang_tidy.sh  run_clang_tidy_macos.sh
clangd/: .clangd
doxygen/: BUILD.bazel  doxygen.bzl  doxygen_linux.BUILD  doxygen_macos.BUILD  extensions.bzl
examples/small_world/: .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  rules_swiftnav.code-workspace
examples/small_world/scripts/: generate_coverage.sh
examples/small_world/src/base_math/: BUILD.bazel  add.cc  add.hpp  add_test.cc  base_math_test.cc  sign.cc  sign.hpp  sign_test.cc
examples/small_world/src/fibonacci/: BUILD.bazel  fibonacci.cc
examples/small_world/src/old_folder_structure/: BUILD.bazel
examples/small_world/src/strip_tool/: BUILD.bazel
examples/small_world/src/use_external_dep/: BUILD.bazel  use_external_dep.cc  (+2 more)
examples/small_world/test/: compile_flags.py
examples/small_world/tools/: test_compile_flags.py
fix_include_guards/: BUILD.bazel  run_fix_include_guards.sh
image/: BUILD.bazel  defs.bzl  transition.bzl
stamp/: BUILD.bazel  stamp_file.bzl  stamp_file.py
test/small_world/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  rules_swiftnav.code-workspace
test/small_world/scripts/: generate_coverage.sh
tools/: BUILD.bazel  cc_static_library.bzl  configure_file.bzl  doxygen.bzl  filter.bzl  gen_sonar_cfg.bzl  gen_sonar_config.sh  get_cc_files.bzl  get_coverage_files.bzl  get_files.bzl  github_release_asset_file.bzl  github_release_context.bzl  local_archive.bzl  qac_compile_commands.bzl  qac_compile_commands.py  qac_compile_commands.sh  release.py  release_test.py  stamp_file.bzl  stamp_file.py  string_list_file.bzl
tools/lint/: BUILD.bazel  extract_lint_results.py  extract_lint_results_test.py  lint.sh
tools/valgrind/: BUILD.bazel  callgrind.bzl  memcheck.bzl  valgrind_callgrind_run.sh  valgrind_memcheck_run.sh
(+68 files in other folders)
