load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "swift_cc_defs_docs",
    input = "swift_cc_defs.bzl",
    out = "swift_cc_defs.md",
)

stardoc(
    name = "configure_file_docs",
    input = "configure_file.bzl",
    out = "configure_file.md",
)

exports_files(["qac_compile_commands.sh"])
