module(
    name = "rules_swiftnav",
    version = "0.1.0",
    compatibility_level = 1,
)

# Core Bazel dependencies
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_pkg", version = "0.9.1")

# Go dependencies (for buildifier)
bazel_dep(name = "rules_go", version = "0.39.1", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.31.0", dev_dependency = True)

# Protocol Buffers
bazel_dep(name = "protobuf", version = "21.7", dev_dependency = True)

# Buildtools (for buildifier)
# bazel_dep(name = "buildtools", version = "6.1.2", dev_dependency = True)

# # Register module extensions
swift_cc_toolchain_ext = use_extension("@rules_swiftnav//cc:extensions.bzl", "swift_cc_toolchain_extension")
use_repo(
    swift_cc_toolchain_ext,
    "aarch64-darwin-llvm",
    "x86_64-darwin-llvm",
    "aarch64-linux-llvm",
    "x86_64-linux-llvm",
    "aarch64-linux-musl",
    "arm-linux-musleabihf",
    "x86_64-linux-musl",
    "llvm_mingw_toolchain",
    "aarch64-sysroot",
    "x86_64-sysroot",
)
