# Copyright (C) 2025 Swift Navigation Inc.
# Contact: Swift Navigation <dev@swift-nav.com>
#
# This source is subject to the license found in the file 'LICENSE' which must
# be be distributed together with this source. All other rights reserved.
#
# THIS CODE AND INFORMATION IS PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND,
# EITHER EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND/OR FITNESS FOR A PARTICULAR PURPOSE.

module(
    name = "rules_swiftnav",
    version = "0.12.0",
    compatibility_level = 1,
)

# Core Bazel dependencies
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_oci", version = "1.8.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# Register module extensions
swift_cc_toolchain_ext = use_extension("@rules_swiftnav//cc:extensions.bzl", "swift_cc_toolchain_extension")
use_repo(
    swift_cc_toolchain_ext,
    "aarch64-darwin-llvm",
    "aarch64-darwin-llvm20",
    "aarch64-linux-llvm",
    "aarch64-linux-llvm20",
    "aarch64-linux-musl",
    "aarch64-sysroot",
    "arm-linux-musleabihf",
    "darwin_gcc_arm_embedded_toolchain",
    "gcc_arm_gnu_8_3_toolchain",
    "llvm_mingw_toolchain",
    "x86_64-darwin-llvm",
    "x86_64-darwin-llvm20",
    "x86_64-linux-llvm",
    "x86_64-linux-llvm20",
    "x86_64-linux-musl",
    "x86_64-sysroot",
    "x86_64_linux_gcc_arm_embedded_toolchain",
)

# On consumer side, register toolchains for the supported architectures:
# register_toolchains(
#     "@rules_swiftnav//cc/toolchains/llvm/aarch64-darwin:cc-toolchain-aarch64-darwin",
#     "@rules_swiftnav//cc/toolchains/llvm/x86_64-darwin:cc-toolchain-x86_64-darwin",
#     "@rules_swiftnav//cc/toolchains/llvm/aarch64-linux:cc-toolchain-aarch64-linux",
#     "@rules_swiftnav//cc/toolchains/llvm/x86_64-linux:cc-toolchain-x86_64-linux",
#     "@rules_swiftnav//cc/toolchains/llvm/x86_64-linux:cc-toolchain-intel-mkl",
#     "@rules_swiftnav//cc/toolchains/llvm/x86_64-aarch64-linux:cc-toolchain-aarch64-bullseye-graviton2",
#     "@rules_swiftnav//cc/toolchains/llvm/x86_64-aarch64-linux:cc-toolchain-aarch64-bullseye-graviton3",
#     "@rules_swiftnav//cc/toolchains/musl/aarch64:toolchain",
#     "@rules_swiftnav//cc/toolchains/musl/armhf:toolchain",
#     "@rules_swiftnav//cc/toolchains/musl/x86_64:toolchain",
#     "@rules_swiftnav//cc/toolchains/llvm_x86_64_windows:mingw_toolchain",
#     "@rules_swiftnav//cc/toolchains/gcc_arm_embedded:toolchain",
#     "@rules_swiftnav//cc/toolchains/yocto_generic:toolchain",
# )

yocto_generic_ext = use_extension("@rules_swiftnav//cc/toolchains/yocto_generic:yocto_generic_extension.bzl", "yocto_generic_extension")
use_repo(yocto_generic_ext, "yocto_generic")

# Register the buildifier toolchain
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.1",
    dev_dependency = True,
)
