load("@bazel_skylib//rules:common_settings.bzl", "string_list_flag")
load("//tools:string_list_file.bzl", "string_list_file")

sh_binary(
    name = "get_test_cc_files",
    srcs = ["get_test_cc_files.sh"],
    visibility = ["//visibility:public"],
)

string_list_flag(
    name = "ignored_test_srcs",
    build_setting_default = [],
)

string_list_file(
    name = "_ignored_test_srcs",
    string_list = ":ignored_test_srcs",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "compare_cc_test_files",
    srcs = ["compare_cc_test_files.sh"],
    args = [
        "$(location :_ignored_test_srcs)",
    ],
    data = [
        ":_ignored_test_srcs",
    ],
    visibility = ["//visibility:public"],
)
