load(":choose_clang_tidy.bzl", "choose_clang_tidy")

choose_clang_tidy(
    name = "clang_tidy_bin",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "clang_tidy",
    srcs = select({
        "@platforms//os:macos": ["run_clang_tidy_macos.sh"],
        "//conditions:default": ["run_clang_tidy.sh"],
    }),
    data = [":clang_tidy_config"],
    visibility = ["//visibility:public"],
)

filegroup(
  name = "clang_tidy_config_internal",
  srcs = [".clang-tidy-internal"],
  visibility = ["//visibility:public"],
)

filegroup(
  name = "clang_tidy_config_portable",
  srcs = [".clang-tidy-portable"],
  visibility = ["//visibility:public"],
)

filegroup(
  name = "clang_tidy_config_prod",
  srcs = [".clang-tidy-prod"],
  visibility = ["//visibility:public"],
)

filegroup(
  name = "clang_tidy_config_safe",
  srcs = [".clang-tidy-safe"],
  visibility = ["//visibility:public"],
)

filegroup(
    name = "clang_tidy_config_default",
    srcs = [".clang-tidy"],
)

label_flag(
    name = "clang_tidy_config",
    build_setting_default = ":clang_tidy_config_default",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "clang_tidy_executable_default",
    srcs = select(
        {
            "@bazel_tools//src/conditions:darwin_x86_64": ["@x86_64-darwin-llvm//:clang-tidy"],
            "@bazel_tools//src/conditions:linux_x86_64": ["@x86_64-linux-llvm//:clang-tidy"],
            "//conditions:default": [":clang_tidy_bin"],
        },
    ),
)

label_flag(
    name = "clang_tidy_executable",
    build_setting_default = ":clang_tidy_executable_default",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "clang_tidy_additional_deps_default",
    srcs = [],
)

label_flag(
    name = "clang_tidy_additional_deps",
    build_setting_default = ":clang_tidy_additional_deps_default",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "clang_tidy_fixes",
    srcs = ["clang_tidy_fixes.sh"],
    visibility = ["//visibility:public"],
)
