exports_files(
    glob(["*.bzl"]) + glob(["*.py"]),
    visibility = ["//visibility:public"],
)

config_setting(
    name = "stamp",
    values = {"stamp": "1"},
    visibility = ["//visibility:public"],
)

py_binary(
    name = "stamp_file",
    srcs = ["stamp_file.py"],
    main = "stamp_file.py",
    visibility = ["//visibility:public"],
)
