# Copyright (C) 2022 Swift Navigation Inc.
# Contact: Swift Navigation <dev@swift-nav.com>
#
# This source is subject to the license found in the file 'LICENSE' which must
# be be distributed together with this source. All other rights reserved.
#
# THIS CODE AND INFORMATION IS PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND,
# EITHER EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND/OR FITNESS FOR A PARTICULAR PURPOSE.

load("//tools:get_coverage_files.bzl", "get_cov_files_rules")

exports_files(
    glob(["*.bzl"]) + ["qac_compile_commands.sh"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dummy",
)

label_flag(
    name = "cov_target",
    build_setting_default = ":dummy",
    visibility = ["//visibility:public"],
)

get_cov_files_rules(
    name = "cov_files",
    testonly = 1,
    deps = [":cov_target"],
)

sh_binary(
    name = "gen_sonar_config",
    srcs = ["gen_sonar_config.sh"],
)
