# Copyright (C) 2022-2026 Swift Navigation Inc.
# Contact: Swift Navigation <dev@swift-nav.com>
#
# This source is subject to the license found in the file 'LICENSE' which must
# be distributed together with this source. All other rights reserved.
#
# THIS CODE AND INFORMATION IS PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND,
# EITHER EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND/OR FITNESS FOR A PARTICULAR PURPOSE.

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_test.bzl", "py_test")
load("@rules_swiftnav//cc:defs.bzl", "UNIT")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

string_flag(
    name = "root_dir",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

py_binary(
    name = "release",
    srcs = ["release.py"],
    main = "release.py",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "release_test",
    srcs = [
        "release.py",
        "release_test.py",
    ],
    main = "release_test.py",
    tags = [UNIT],
)
