load("@bazel_skylib//lib:selects.bzl", "selects")

package(default_visibility = ["//visibility:public"])

constraint_setting(name = "libc")

constraint_setting(
    name = "toolchain",
    default_constraint_value = ":llvm20_toolchain",
)

constraint_value(
    name = "llvm_toolchain",
    constraint_setting = ":toolchain",
)

constraint_value(
    name = "llvm20_toolchain",
    constraint_setting = ":toolchain",
)

constraint_value(
    name = "gcc_11_system_toolchain",
    constraint_setting = ":toolchain",
)

constraint_value(
    name = "gcc_12_system_toolchain",
    constraint_setting = ":toolchain",
)

constraint_value(
    name = "yocto_generic_toolchain",
    constraint_setting = ":toolchain",
)

# musl is modeled as a `toolchain` value (not a pure `libc` tag) because the musl
# cross toolchains are a self-contained compiler family that bundles its own libc,
# mutually exclusive with llvm20/gcc above. Crucially this lets a musl platform
# OVERRIDE the `toolchain` default (`llvm20_toolchain`); otherwise the platform
# would inherit that default and the host-runnable llvm20 x86_64 toolchain would
# match it, silently producing glibc binaries.
constraint_value(
    name = "musl",
    constraint_setting = ":toolchain",
)

constraint_setting(name = "compiler")

constraint_value(
    name = "gcc-5",
    constraint_setting = ":compiler",
)

constraint_value(
    name = "gcc-6",
    constraint_setting = ":compiler",
)

constraint_value(
    name = "glibc_2_31",
    constraint_setting = ":libc",
)

constraint_setting(name = "graviton")

constraint_value(
    name = "graviton2",
    constraint_setting = ":graviton",
)

constraint_value(
    name = "graviton3",
    constraint_setting = ":graviton",
)

constraint_value(
    name = "cortexa7t2hf-neon-poky",
    constraint_setting = "@platforms//cpu",
)

constraint_value(
    name = "cortex-m4",
    constraint_setting = "@platforms//cpu",
)

constraint_value(
    name = "cortex-m7",
    constraint_setting = "@platforms//cpu",
)

constraint_value(
    name = "cortex-m3",
    constraint_setting = "@platforms//cpu",
)

constraint_value(
    name = "cortex-a7",
    constraint_setting = "@platforms//cpu",
)

constraint_value(
    name = "cortex-a9",
    constraint_setting = "@platforms//cpu",
)

constraint_value(
    name = "unspecified_arm",
    constraint_setting = "@platforms//cpu",
)

selects.config_setting_group(
    name = "gcc_arm_cpu",
    match_any = [
        ":cortex-m4",
        ":cortex-m7",
        ":cortex-m3",
        ":cortex-a7",
        ":cortex-a9",
        ":unspecified_arm",
    ],
)

selects.config_setting_group(
    name = "aarch64_debian",
    match_all = [
        "@platforms//cpu:aarch64",
        "glibc_2_31",
    ],
)

selects.config_setting_group(
    name = "x86_64_debian",
    match_all = [
        "@platforms//cpu:x86_64",
        "glibc_2_31",
    ],
)
