package(default_visibility = ["//visibility:public"])

load(":cc_toolchain_config.bzl", "cc_toolchain_config")

filegroup(name = "empty")

filegroup(
    name = "wrappers",
    srcs = glob([
        "wrappers/**",
    ]),
)

filegroup(
    name = "all_files",
    srcs = [
        "@llvm-distribution//:toolchain",
        ":wrappers",
    ],
)

cc_toolchain_config(name = "local-x86_64-linux")

cc_toolchain(
    name = "cc-clang-x86_64-linux",
    all_files = ":all_files",
    ar_files = ":all_files",
    as_files = ":all_files",
    compiler_files = ":all_files",
    dwp_files = ":empty",
    linker_files = ":all_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
    toolchain_config = ":local-x86_64-linux",
)

toolchain(
    name = "cc-toolchain-x86_64-linux",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_settings = None,
    toolchain = ":cc-clang-x86_64-linux",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
